sample/msvc/error/c2673.cpp
// C2673.cpp
int main() {
   this = 0;   // C2673
}
